install Newtonsoft.Json.dll

--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -27,6 +27,8 @@ RUN apt-get update && apt-get -y --no-install-recommends upgrade \
 
 RUN rm /opt/microsoft/powershell/7/Newtonsoft.Json.dll
 
+RUN /bin/sh -c sh -c "y | pwsh -Command 'Install-Package -Name newtonsoft.json -ProviderName NuGet'"
+
 # RUN sh -c "yes | pwsh -Command 'Uninstall-Module -Force -Name newtonsoft.json'"
 # RUN pwsh -Command 'Uninstall-Module -Force -Name newtonsoft.json'
 
