--- a/docker/parse-emails/Dockerfile
+++ b/docker/parse-emails/Dockerfile
@@ -3,7 +3,7 @@ FROM demisto/python3:3.11.9.106008
 
 COPY requirements.txt .
 
-RUN apk --update add --no-cache libmagic pandoc
+RUN apk --update add --no-cache libmagic
 
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base libffi-dev wget git \
   && pip install --no-cache-dir -r requirements.txt \
