--- a/docker/parse-emails/Dockerfile
+++ b/docker/parse-emails/Dockerfile
@@ -8,4 +8,5 @@ RUN apk --update add --no-cache libmagic
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base libffi-dev wget git \
   && pip install --no-cache-dir -r requirements.txt \
   && pip uninstall -y pcodedmp \
-  && apk del .build-dependencies
+  && apk del .build-dependencies \
+  && apk add openssl
