--- a/docker/parse-emails/pyproject.toml
+++ b/docker/parse-emails/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "~3.11"
 parse-emails = "*"
-
+beautifulsoup4 = "*"
 
 [build-system]
 requires = ["poetry-core"]
