lock to use parse-emails v0.1.25

--- a/docker/parse-emails/pyproject.toml
+++ b/docker/parse-emails/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.11"
-parse-emails = { git = "https://github.com/demisto/parse-emails.git", rev = "0cd32f513df00962c869598bd79019347474a401" }
+parse-emails = "*"
 
 
 [build-system]
