--- a/docker/parse-emails/pyproject.toml
+++ b/docker/parse-emails/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.11"
-parse-emails = { git = "https://github.com/demisto/parse-emails.git", rev = "e91404b" }
+parse-emails = "*"
 
 
 [build-system]
