--- a/docker/pysigma/Pipfile
+++ b/docker/pysigma/Pipfile
@@ -9,6 +9,8 @@ pysigma-backend-cortexxdr = "*"
 pysigma-backend-splunk = "*"
 pysigma-backend-sentinelone = "*"
 pysigma-backend-qradar = "*"
+pysigma-backend-microsoft365defender = '*'
+pysigma-backend-carbonblack = '*'
 
 [dev-packages]
 
