--- a/docker/pysigma/Pipfile
+++ b/docker/pysigma/Pipfile
@@ -11,6 +11,7 @@ pysigma-backend-sentinelone = "*"
 pysigma-backend-qradar = "*"
 pysigma-backend-microsoft365defender = "*"
 pysigma-backend-carbonblack = "*"
+pysigma-backend-elasticsearch = "*"
 
 [dev-packages]
 
