XSUP39160-upgrade slack-sdk

--- a/docker/slackv3/Dockerfile
+++ b/docker/slackv3/Dockerfile
@@ -1,15 +1,6 @@
 
-FROM demisto/python3:3.11.9.107902
+FROM demisto/slackv3:1.0.0.97264
 
 COPY requirements.txt .
 
-RUN apt-get update && apt-get install -y --no-install-recommends python3-dev build-base libffi-dev wget git \
-  && pip install --no-cache-dir -r requirements.txt \
-  && apt-get purge -y --auto-remove \
-  gcc \
-  python3-dev \
-  lbuild-base \
-  libffi-dev \
-  wget \
-  git \ 
-  && rm -rf /var/lib/apt/lists/*
+RUN  pip upgrade slack-sdk
